Going on rebutting

--- a/rebuttal/ijcai21-authors-response.tex
+++ b/rebuttal/ijcai21-authors-response.tex
@@ -37,25 +37,25 @@
 \addtocounter{pagecount}{-4}
 
 	We thank the reviewers for their comments. We specify that the questions reported are not verbatim for lack of space and focus on factual errors. 
-\paragraph{Review $\#$2: “the method proposed here is not compared with others”.}
+\paragraph{Review $\#$2 writes as a weankess that “the method proposed here is not compared with others”.}
 We believe it is erroneous to consider the lack of comparison a weakness. The simultaneous elicitation of both the voting rule and the agents preferences is a novel setting and, as far as we know, there is no competitor from the state-of-the-art to compare with. 
 We are not aware of any method that elicits the voting rule we could compare with – the work by Cailloux and Endriss [2014] does not consider PSRs. Nevertheless, the Two Phases strategy was designed to challenge our interleaving approach by comparing it with a more classical sequential method, which (when first eliciting the rule and then the agents preferences) coincides with the method of Lu and Boutilier [2011] for preferences elicitation with a fixed voting rule.
-
-\paragraph{Review $\#$2: “Only variants of the same methods are compared with each others”.}
-The Elitist strategy has a very different approach than the Pessimistic one, to the point that it cannot be considered a variant. They are compared in a situation specifically tailored to advantage the Elitist. \commentOC{Isn’t this a bit arguable that Elitist is very different rather than a variant?}
+%\paragraph{Review $\#$2: “Only variants of the same methods are compared with each others”.}
+%\commentOC{Isn’t this a bit arguable that Elitist is very different rather than a variant?}
+The Elitist strategy has a very different approach than the Pessimistic one, to the point that it cannot be considered a variant. They are compared in a situation specifically tailored to advantage the Elitist. 
 
 \paragraph{Review $\#$2: “the voting rule has to be defined independently of the preferences of the voters. And probably not by the chairpersonn who may influence the result by choosing the weights”.}
 It is not true that any decision process involving preference aggregation requires a voting rule defined beforehand, nor that it is necessarily a bad idea to let a chair decide on the voting rule. The interest of considering incomplete knowledge in the voting rule has been advocated in a recent survey paper of a leading researcher in Computational Social Choice [Lang 2020, \href{https://doi.org/10.24963/ijcai.2020/680}{doi: 10.24963/ijcai.2020/680}]. The case of IJCAI aggregation process of reviews illustrates the point: reviewers provide their preferences despite ignoring how these will be aggregated. The Introduction section of our article provides another example.
 
-\paragraph{Review $\#$32 suggests that it is hard to find “any real setting where a third party decides who wins a vote, not the chair. (…) Why would voters participate in a voting rule that is not public or common knowledge? (…) Why would the chair give up control of choosing the winner?”.}
-\textit{\textbf{Can the authors give an example of when the setting may occur in practice? Why would voters participate without knowing the voting rule? Why selecting winners is easier than reflecting on weights or computing the winner herself?}}
+\paragraph{Review $\#$32 suggests that it is hard to find “any real setting where a third party decides who wins a vote, not the chair. (…) Why would voters participate in a voting rule that is not public or common knowledge? (…) If the chair can compute winners over and over for every elicitation for arbitrary size profiles, why wouldn't the chair just compute the real winner himself or herself, rather the delegate to the third party? (…) Why is this easier than reflecting on the relative weights?”}
 It is not true that such setting is uncommon, on the contrary. Other than the example we provided in the Introduction, we could consider the reviewing process of a conference where the best paper must be elected. In this context, the agents express their preferences on the papers they reviewed, but they are not aware of the voting rule the Program Chair will apply when aggregating them. Nonetheless, reviewers are still willing to participate in the process. 
-Also, the PC may not have a specific voting rule in mind, and she will find it hard to provide a precise scoring vector if asked. Imagine, for the sake of the example, that all the reviewers review all the papers and they rank them according to their preferences. The PC member could adopt the Borda count and pick the paper with the highest score, but this is not the most appealing method. Maybe she strongly believes that being ranked once in the first position is “much more” valuable than being ranked two times second, but does not know exactly how much more (though she can judge example cases). This is similar to how the paper WeBuildAI (and the general literature in micro-economy) supposes that participants are able to compare pairs of matches, but does not assume that participants can explicit their utility functions. Methodologically speaking, phrasing questions in terms of winners out of profiles is arguably the most fundamental and natural view of what a social choice function is. Talking in terms of weights is a synthetic construction that could lead to different judgments by participants than other constructions. \commentOC{I find it important that the two next commented-out sentences be somehow included.}
-%For example, PSRs can also be described in terms of distance to ideal profiles ( On the role of distances in defining voting rules, Elkind et al., AAMAS 2010). 
-%There is no a priori reason to believe that questioning the chair in terms of this different parametric space would yield logically equivalent answers: 
-A research in experimental psychology shows that participants’ answers differ widely when changing the phrasing of preference-related questions [Lichtenstein \& Slovic, 2012, \href{https://doi.org/10.1017/CBO9780511618031}{doi: 10.1017/CBO9780511618031}].
-%(Lichtenstein, Slovic - The Construction of Preference, Cambridge University Press, 2006). 
+Also, the PC may not have a specific voting rule in mind, and she will find it hard to provide a precise scoring vector if asked. Imagine, for the sake of the example, that all the reviewers review all the papers and they rank them according to their preferences. The PC member could adopt the Borda count and pick the paper with the highest score, but this is not the most appealing method. Maybe she strongly believes that being ranked once in the first position is “much more” valuable than being ranked two times second, but does not know exactly how much more (though she can judge example cases). This is similar to how the paper WeBuildAI (and the general literature in micro-economy) supposes that participants are able to compare pairs of matches, but does not assume that participants can explicit their utility functions. Methodologically speaking, phrasing questions in terms of winners out of profiles is arguably the most fundamental and natural view of what a social choice function is. Talking in terms of weights is a synthetic construction that could lead to different judgments by participants than other constructions. 
+For example, PSRs can also be described in terms of distance to ideal profiles (On the role of distances in defining voting rules, Elkind et al., AAMAS 2010). 
+There is no a priori reason to believe that questioning the chair in terms of this different parametric space would yield logically equivalent answers: research in experimental psychology shows that participants’ answers differ widely when changing the phrasing of preference-related questions [Lichtenstein \& Slovic, 2012, \href{https://doi.org/10.1017/CBO9780511618031}{doi: 10.1017/CBO9780511618031}].
 To get out of such conundrums, we need a language considered “fundamental”. Questions of the form “In this profile, who should win?” arguably provides such a natural language.
+
+\paragraph{Review $\#$32: Why would the chair give up control of choosing the winner?”.}
+\textit{\textbf{}}
 %Specifying general algorithms is demanding, hence, we adapt a mechanism used in a real life experiment by Giritligil et al. [2005] in a novel way for the setting of elicitation of positioning scoring rules (PSRs). 
 
 %Finally, the chair could delegate to a third party, by agreeing to let the principle of “min-max regret” decide instead of picking her favorite winner, for example, because the chair wants to satisfy a form of fairness which she thinks that algorithm satisfies. This is a classical assumption in political science. 
