Full VS partial profiles

--- a/rebuttal/ijcai21-authors-response.tex
+++ b/rebuttal/ijcai21-authors-response.tex
@@ -57,7 +57,7 @@ For example, PSRs can also be described in terms of distance to ideal profiles (
 There is no a priori reason to believe that questioning the chair in terms of this different parametric space would yield logically equivalent answers: research in experimental psychology shows that participants’ answers differ widely when changing the phrasing of preference-related questions [Lichtenstein \& Slovic, 2012, \href{https://doi.org/10.1017/CBO9780511618031}{doi: 10.1017/CBO9780511618031}].
 To get out of such conundrums, we need a language considered “fundamental”. Questions of the form “In this profile, who should win?” arguably provides such a natural language.
 
-Also, it is a classical assumption in political science that the chair could delegate to a third party, for example, because the chair wants to satisfy a form of fairness which she thinks that algorithm satisfies. In our case, this is done by agreeing to let the principle of “min-max regret” decide instead of picking her favorite winner.
+Also, it is a classical assumption in political science that the chair could delegate to a third party, for example, because the chair wants to satisfy a form of fairness which she thinks that algorithm satisfies. In our case, this is done by agreeing to let the principle of “min-max regret” decide instead of picking her favorite winner. Note that we assume the chair can pick winners out of full profiles, but needs to delegate to the min-max algorithm for querying and picking winners out of partial profiles.
 
 %\paragraph{Review $\#$32: Why would the chair give up control of choosing the winner?”.}
 \textit{\textbf{}}
