--- a/rebuttal/ijcai21-authors-response.tex
+++ b/rebuttal/ijcai21-authors-response.tex
@@ -36,20 +36,19 @@
 %Working around the censorship.
 \addtocounter{pagecount}{-4}
 
-	We thank the reviewers for their comments. We focus on factual errors and on the “questions for the authors”. \commentBN{Maybe: "We focus on factual errors and only on the questions reported in “questions for the authors”", or "We focus on factual errors when not better specified." and we write a Q before the questions.}
-
+	We thank the reviewers for their comments.
+	
 \paragraph{Review $\#$2 writes as a weakness that “the method proposed here is not compared with others”.}
 We believe it is erroneous to consider the lack of comparison a weakness. The simultaneous elicitation of both the voting rule and the agents preferences is a novel setting and, as far as we know, there is no competitor from the state-of-the-art to compare with. 
 We are not aware of any method that elicits the voting rule we could compare with – the work by Cailloux and Endriss [2014] does not consider PSRs. Nevertheless, the Two Phases strategy was designed to challenge our interleaving approach by comparing it with a more classical sequential method, which (when first eliciting the rule and then the agents preferences) coincides with the method of Lu and Boutilier [2011] for preferences elicitation with a fixed voting rule.
 %\paragraph{Review $\#$2: “Only variants of the same methods are compared with each others”.}
 %\commentOC{Isn’t this a bit arguable that Elitist is very different rather than a variant?}
 The Elitist strategy has a very different approach than the Pessimistic one and does not use the regret to question the voters. It was conceived to challenge our best strategy (Pessimistic) in extreme cases tailored to favor Elitist.
-\commentBN{I removed "to the point that it cannot be considered a variant", it's arguable, maybe it's better to not focus on this.}
 
 \paragraph{Review $\#$2: “the voting rule has to be defined independently of the preferences of the voters. And probably not by the chairpersonn who may influence the result by choosing the weights”.}
 It is not true that any decision process involving preference aggregation requires a voting rule defined beforehand, nor that it is necessarily a bad idea to let a chair decide on the voting rule. The interest of considering incomplete knowledge in the voting rule has been advocated in a recent survey paper of a leading researcher in Computational Social Choice [Lang 2020, \href{https://doi.org/10.24963/ijcai.2020/680}{doi: 10.24963/ijcai.2020/680}]. The case of IJCAI aggregation process of reviews illustrates the point: reviewers provide their preferences despite ignoring how these will be aggregated. The Introduction section of our article provides another example.
 
-\paragraph{Review $\#$32 suggests that it is hard to find “any real setting where a third party decides who wins a vote, not the chair. (…) Why would voters participate in a voting rule that is not public or common knowledge? (…) If the chair can compute winners over and over for every elicitation for arbitrary size profiles, why wouldn't the chair just compute the real winner himself or herself, rather the delegate to the third party? (…) Why is this easier than reflecting on the relative weights?”}
+\paragraph{Review $\#$32 suggests that it is hard to find “any real setting where a third party decides who wins a vote, not the chair. (…) Can the authors give an example? (…) Why would voters participate in a voting rule that is not public or common knowledge? (…) If the chair can compute winners over and over for every elicitation for arbitrary size profiles, why wouldn't the chair just compute the real winner himself or herself, rather the delegate to the third party? (…) Why is this easier than reflecting on the relative weights?”}
 It is not true that such setting is uncommon, on the contrary. Other than the example we provided in the Introduction, we could consider the reviewing process of a conference where the best paper must be elected. In this context, the agents express their preferences on the papers they reviewed, but they are not aware of the voting rule the Program Chair will apply when aggregating them. Nonetheless, reviewers are still willing to participate in the process. 
 Also, the PC may not have a specific voting rule in mind, and she will find it hard to provide a precise scoring vector if asked. Maybe she strongly believes that being ranked once in the first position is “much more” valuable than being ranked two times second, but does not know exactly how much more (though she can judge example cases). This is similar to how the paper WeBuildAI (and the general literature in micro-economy) supposes that participants are able to compare pairs of matches, but does not assume that participants can explicit their utility functions. 
 
@@ -70,10 +69,11 @@ Also, it is a classical assumption in political science that the chair could del
 
 %-Is Figure 1 for the synthetic data? Please specify. Same question for Tables 2 and 3. In Figure 2, are the m=N,n=N lines the synthetic data?
 %-Why is Figure 2 shown for only Pessimistic, not all the approaches? Were all approaches tested on all data sets? Or were all approaches only tested on synthetic data?
-Yes, when we do not specify the name of the dataset we mean data generated following the procedure described in Sec 5. Regarding the real datasets, we only tested the Pessimistic strategy for the following reasons: $1)$ Random was considered only as a baseline in the first experiment, which shows that Pessimistic performs much better; $2)$ Extended Pessimistic is too computationally costly to run on larger instances (as pointed out in Sec 4); $3)$ Elitist was designed with the only purpose of challenging our best strategy (Pessimistic) in extreme cases tailored to favor the former. Testing this strategy in other settings does not yield interesting information; $4)$ Two Phases was designed to compare our interleaving approach to a more classical linear method. We thought that the most challenging situation (Impartial Culture) was the best setting to perform this test. \commentOC{What does the last sentence answer?}\commentBN{To why we didn't test Two Phases with real datasets.}
+%Yes, when we do not specify the name of the dataset we mean data generated following the procedure described in Sec 5. Regarding the real datasets, we only tested the Pessimistic strategy for the following reasons: $1)$ Random was considered only as a baseline in the first experiment, which shows that Pessimistic performs much better; $2)$ Extended Pessimistic is too computationally costly to run on larger instances (as pointed out in Sec 4); $3)$ Elitist was designed with the only purpose of challenging our best strategy (Pessimistic) in extreme cases tailored to favor the former. Testing this strategy in other settings does not yield interesting information; $4)$ Two Phases was designed to compare our interleaving approach to a more classical linear method. We thought that the most challenging situation (Impartial Culture) was the best setting to perform this test. \commentOC{What does the last sentence answer?}\commentBN{To why we didn't test Two Phases with real datasets.}
+%
+%\commentBN{If we want to keep this we could summarize it as follows}
 
-\commentBN{If we want to keep this we could summarize it as follows}
-Yes, when we do not specify the name of the dataset we mean data generated following the procedure described in Sec 5. We designed several strategies in order to challenge one another and select the best strategy in the worst case (Impartial Culture). Once this was found to be Pessimistic, we tested it on real dataset.
+Yes, when we do not specify the name of the dataset we mean data generated following the procedure described in Sec 5. We designed several strategies in order to challenge one another and select the best strategy in the most challenging setting (Impartial Culture). Once this was found to be Pessimistic, we tested it on real dataset.
 
 \paragraph{Review $\#$56: “If the chair does not know the weight vector, he can’t answer the questions.”}
 This is untrue, as indicated above as a reply to Review \#32.
