--- a/rebuttal/ijcai21-authors-response.tex
+++ b/rebuttal/ijcai21-authors-response.tex
@@ -60,12 +60,11 @@ To get out of such conundrums, we need a language considered “fundamental”. 
 Also, it is a classical assumption in political science that the chair could delegate to a third party, for example, because the chair wants to satisfy a form of fairness which she thinks that algorithm satisfies. In our case, this is done by agreeing to let the principle of “min-max regret” decide instead of picking her favorite winner. Note that we assume the chair can pick winners out of full profiles, but needs to delegate to the min-max algorithm for querying the voters and picking winners out of partial profiles.
 
 %\paragraph{Review $\#$32: Why would the chair give up control of choosing the winner?”.}
-\textit{\textbf{}}
 %Specifying general algorithms is demanding, hence, we adapt a mechanism used in a real life experiment by Giritligil et al. [2005] in a novel way for the setting of elicitation of positioning scoring rules (PSRs). 
 
 %Note that the chair cannot compute the real winner as she ignores the profile. 
 
-\textit{\textbf{Is Figure 1 for the synthetic data? Please specify. Why is Figure 2 shown for only Pessimistic, not all the approaches?}}
+\paragraph{Review $\#$32 "Is Figure 1 for the synthetic data? Please specify. (…) Why is Figure 2 shown for only Pessimistic, not all the approaches?"}
 
 %-Is Figure 1 for the synthetic data? Please specify. Same question for Tables 2 and 3. In Figure 2, are the m=N,n=N lines the synthetic data?
 %-Why is Figure 2 shown for only Pessimistic, not all the approaches? Were all approaches tested on all data sets? Or were all approaches only tested on synthetic data?
