--- a/rebuttal/ijcai21-authors-response.tex
+++ b/rebuttal/ijcai21-authors-response.tex
@@ -36,7 +36,7 @@
 %Working around the censorship.
 \addtocounter{pagecount}{-4}
 
-	We thank the reviewers for their comments.
+	We thank the reviewers for their comments. We address factual errors ($\#$2) and both factual errors and direct questions ($\#$32 and $\#$56).
 	
 \paragraph{Review $\#$2 writes as a weakness that “the method proposed here is not compared with others”.}
 We believe it is erroneous to consider the lack of comparison a weakness. The simultaneous elicitation of both the voting rule and the agents preferences is a novel setting and, as far as we know, there is no competitor from the state-of-the-art to compare with. 
@@ -64,7 +64,7 @@ Also, it is a classical assumption in political science that the chair could del
 
 %Note that the chair cannot compute the real winner as she ignores the profile. 
 
-\paragraph{Review $\#$32 "Is Figure 1 for the synthetic data? Please specify. (…) Why is Figure 2 shown for only Pessimistic, not all the approaches?"}
+%\paragraph{Review $\#$32 "Is Figure 1 for the synthetic data? Please specify. (…) Why is Figure 2 shown for only Pessimistic, not all the approaches?"}
 
 %-Is Figure 1 for the synthetic data? Please specify. Same question for Tables 2 and 3. In Figure 2, are the m=N,n=N lines the synthetic data?
 %-Why is Figure 2 shown for only Pessimistic, not all the approaches? Were all approaches tested on all data sets? Or were all approaches only tested on synthetic data?
@@ -72,7 +72,7 @@ Also, it is a classical assumption in political science that the chair could del
 %
 %\commentBN{If we want to keep this we could summarize it as follows}
 
-Yes, when we do not specify the name of the dataset we mean data generated following the procedure described in Sec 5. We designed several strategies in order to challenge one another and select the best strategy in the most challenging setting (Impartial Culture). Once this was found to be Pessimistic, we tested it on real dataset.
+%Yes, when we do not specify the name of the dataset we mean data generated following the procedure described in Sec 5. We designed several strategies in order to challenge one another and select the best strategy in the most challenging setting (Impartial Culture). Once this was found to be Pessimistic, we tested it on real dataset.
 
 \paragraph{Review $\#$56: “If the chair does not know the weight vector, he can’t answer the questions.”}
 This is untrue, as indicated above as a reply to Review \#32.
