--- a/preamble/math.tex
+++ b/preamble/math.tex
@@ -64,17 +64,17 @@
 \DeclareMathDelimiter{(}{\mathopen} {operators}{"28}{largesymbols}{"00}
 \DeclareMathDelimiter{)}{\mathclose}{operators}{"29}{largesymbols}{"01}
 
-\newtheorem{claim}{Claim}
-\newtheorem{prop}{Proposition}
-\newtheorem{corollary}{Corollary}
-\newtheorem{definition}{Definition}
-\newtheorem{example}{Example}
-
+%\newtheorem{claim}{Claim}
+%\newtheorem{prop}{Proposition}
+%\newtheorem{corollary}{Corollary}
+%\newtheorem{definition}{Definition}
+%\newtheorem{example}{Example}
+%
 \DeclarePairedDelimiter\set{\{}{\}}
 \DeclarePairedDelimiter\card{\lvert}{\rvert}
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
-
-\newtheorem*{proof*}{Proof}
-\newtheorem{proposition}{Proposition}
-\newtheorem*{sketch*}{Proof Sketch}
-\newtheorem*{example*}{Example}
+%
+%\newtheorem*{proof*}{Proof}
+%\newtheorem{proposition}{Proposition}
+%\newtheorem*{sketch*}{Proof Sketch}
+%\newtheorem*{example*}{Example}
