--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -2,9 +2,9 @@
 	\input glyphtounicode
 	\pdfgentounicode=1
 %Latin Modern has more glyphs than Computer Modern, such as diacritical characters. fntguide commands to load the font before fontenc, to prevent default loading of cmr.
-	\usepackage{natbib}
-	\newcommand\hmmax{0}
-	\newcommand\bmmax{0}
+%	\usepackage{natbib}
+%	\newcommand\hmmax{0}
+%	\newcommand\bmmax{0}
 %	\usepackage{lmodern} 
 %Encode resulting accented characters correctly in resulting PDF, permits copy from PDF.
 	\usepackage[T1]{fontenc}
@@ -215,6 +215,7 @@
 	\setcounter{tocdepth}{10}
 }{
 }
+
 
 %Do not use the displaymath environment: use equation. Do not use the eqnarray or eqnarray* environments: use align(*). This improves spacing. (See l2tabu or amsldoc.)
 
