--- a/biblio.bib
+++ b/biblio.bib
@@ -163,7 +163,7 @@
 	booktitle= {Scalable Uncertainty Management},
 	year={2018},
 	pages={306--320},
-	doi={10.1007/978-3-030-00461-3_21}
+	doi={10.1007/978-3-030-00461-3\_21},
 }
 
 @inproceedings{Xia2008,
